Fixed progress bar, numbers, and left alignment of the cards.

--- a/styles.css
+++ b/styles.css
@@ -5,21 +5,48 @@
     box-sizing: border-box;
 
 }
+main {
+     min-height: 100vh;
+}
+.progress {
+    background: conic-gradient(hsl(229, 57%, 11%), hsl(229, 7%, 55%));
+
+    margin-bottom: 15px;
+    height: 20px;
+}
+
+.progress-bar {
+    background: conic-gradient(hsl(335, 100%, 65%), hsl(6, 100%, 80%));
+    height: 18px;
+}
+
+.round {
+    border-radius: 50%;
+
+    border: 4px solid white;
+    width: 1px;
+    z-index: 5;
+}
 
 
 body {
-    min-height: 100vh;
+   font-family: 'Raleway', sans-serif;
 
     background-color: hsl(229, 57%, 11%);
     background-image: url("images/bg-desktop.png");
     background-repeat: no-repeat;
-    background-size: 100% auto;
+
     background-position: bottom right;
 }
 
 #control {
     width: 400px;
     background-color: hsl(228, 56%, 26%);
+    margin-left: 30em;
+}
+
+#logo {
+    height: 3em;
 }
 
 
@@ -33,6 +60,6 @@ body {
 
 #storage {
     color: white;
-    width: 700px;
+    width: 600px;
     background-color: hsl(228, 56%, 26%);
 }
